--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,6 @@
         "illuminate/support": "5.*",
         "php" : ">=7.1.0",
         "phpdocumentor/reflection-docblock": "2.0.*@dev",
-        "scrivo/highlight.php": "^9.13",
+        "scrivo/highlight.php": "^9.13"
     }
 }
