--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "delejet/y2apidoc",
+    "name": "delejt/y2apidoc",
     "description": "Yet Another Api Docs Generator",
     "type": "library",
     "license": "MIT",
